--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/styled-components": "^5.1.3",
+    "@types/styled-system": "^5.1.10",
+    "@web3-react/core": "^6.1.1",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.1.6",
+    "antd": "^4.6.6",
+    "ethers": "^5.0.14",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "styled-components": "^5.2.0",
+    "styled-system": "^5.1.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
